# paul-wiki-static-page

./: Cargo.toml  LICENSE-MIT  README.md  icons.scss  index.html  index.scss
src/: app.rs  main.rs
src/components/: main_view.rs  mod.rs  navigation.rs
src/navigation/: mod.rs  route.rs  route_switch.rs
src/pages/: index.rs  info.rs  mod.rs
