[package]
name = "paul-wiki-static-page"
version = "0.1.0"
edition = "2021"
description = "My first try at production code in RUST."
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
gloo-events = "0.1"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
yew-router = "0.17.0"